<resources>
    <string name="app_name">MyCalculatorApp</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="first">1</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="multiply">x</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="divide">/</string>
    <string name="percent">%</string>
    <string name="sign">+/-</string>
    <string name="ac">AC</string>
    <string name="output">0</string>
    <string name="category">Category</string>
    <string name="explore_the_nightlife_of_your_n_city">Explore the nightlife of your \n city</string>
    <string name="free">Free</string>
    <string name="price">Price💰</string>
    <string name="participants">Participants</string>
    <string name="accessibility">Accessibility</string>
    <string name="next">Next</string>
    <string name="category_name">Category</string>
    <string name="accessibility_name">Accessibility</string>
    <string name="price_name">Price</string>
    <string-array name="items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
    </string-array>

    <array name="initial_slider_values">
        <item>0</item>
        <item>100</item>
    </array>
</resources>