<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:id="@+id/btn_result"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clipToPadding="true"
            android:paddingHorizontal="36dp">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:maxLines="1"
                android:text="@string/output"
                android:textColor="@color/white"
                android:textSize="80sp" />
        </HorizontalScrollView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout style="@style/Rows">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:onClick="onNumberClick"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:id="@+id/btn_signs"
                android:onClick="onSignClick"
                android:layout_marginHorizontal="18dp"
                android:text="@string/sign" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:id="@+id/btn_percent"
                android:layout_marginEnd="18dp"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_divide"
                android:onClick="onOperationClick"
                android:text="@string/divide" />

        </LinearLayout>

        <LinearLayout style="@style/Rows">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:onClick="onNumberClick"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="18dp"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:onClick="onNumberClick"
                android:layout_marginEnd="18dp"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_multiply"
                android:onClick="onOperationClick"
                android:text="@string/multiply" />

        </LinearLayout>

        <LinearLayout style="@style/Rows">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:onClick="onNumberClick"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="18dp"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:onClick="onNumberClick"
                android:layout_marginEnd="18dp"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_minus"
                android:onClick="onOperationClick"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout style="@style/Rows">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:onClick="onNumberClick"
                android:text="@string/first" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="18dp"
                android:onClick="onNumberClick"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:layout_marginEnd="18dp"
                android:onClick="onNumberClick"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_plus"
                android:onClick="onOperationClick"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout style="@style/Rows">


            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:layout_width="178dp"
                android:onClick="onNumberClick"
                android:paddingStart="32dp"
                android:paddingEnd="0dp"
                android:text="@string/zero"
                android:textAlignment="textStart" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="18dp"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_equals"
                android:onClick="onOperationClick"
                android:text="@string/equals" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>